# leek-fund

./: .gitignore  .npmignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  source_api.md  start.sh  stock.ts
.codex/: auth.json  config.toml  history.jsonl  version.json
.cursor/rules/: specify-rules.mdc
.github/workflows/: build.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
demo/: dashboard.html  index.html  styles.css
proxy-server/: Cargo.toml
proxy-server/src/: main.rs
scripts/: build-macos.sh
specs/000-fund-list-management/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-eth-price-tab/: spec.md
specs/001-fix-sort-calculation/: spec.md
specs/001-fund-tracker-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fund-detail-layout/: data-model.md  holding-amount-design.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sqlite-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-holding-amount/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-amount-calculation/: plan.md  research.md  spec.md
specs/006-ai-chat-tab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fund-add-search/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: App.css  App.tsx  ai-copilot.css  main.tsx  styles.css  ui-redesign-notes.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  http_server.rs  main.rs  models.rs
src-tauri/src/api/: message.rs  mod.rs  session.rs  stream.rs
src-tauri/src/db/: agent.rs  mod.rs  session.rs  session_chat_message.rs
src-tauri/src/migrations/: 001_init.sql  002_group_fund_positions.sql  003_ai_copilot.sql  004_operations.sql  005_daily_history.sql  mod.rs
src-tauri/src/modules/: asset_position.rs  crypto_api.rs  fund_api.rs  fund_api_tests.rs  fund_storage.rs  gold_api.rs  list_manager.rs  list_manager_tests.rs  mod.rs  news_api.rs  portfolio_snapshot.rs  position_manager.rs  stock_api.rs  storage.rs  storage_tests.rs
src-tauri/src/services/: agent_router.rs  chat_agent.rs  llm_client.rs  message_service.rs  mod.rs  session_service.rs  tool_registry.rs
(+98 files in other folders)
